--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "tailwindcss": "^4.1.13",
+    "toastify-js": "^1.12.0",
     "twig": "^1.17.1"
   },
   "prisma": {
