--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@prisma/client": "^6.16.2",
     "@tailwindcss/cli": "^4.1.13",
     "bcrypt": "^6.0.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "multer": "^2.0.2",
     "tailwindcss": "^4.1.13",
     "toastify-js": "^1.12.0",
     "twig": "^1.17.1"
